# web

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.devcontainer  README.md  app_requirements.txt  docker-compose.yml  embeddings.py  manage.py  nocache.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  utils.py
.cursor/rules/: good-python.mdc  prefer-env-variables-over-django-settings.mdc  repo-description.mdc  structlog.mdc
.devcontainer/: devcontainer.json
agent/: apps.py  serializers.py  urls.py  views.py
caddy/: Caddyfile  Dockerfile
config/: admin.py  allauth_adapter.py  allauth_config.py  app_packages.py  asgi.py  context_processors.py  email.py  fields.py  installed_apps.py  jwt.py  logging.py  middlewares.py  permissions.py  serializers.py  settings.py  spectacular_generators.py  storages.py  taskiq_config.py  taskiq_tasks.py  urls.py  viewsets.py  wsgi.py
contact/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_contactsubmission_message_and_more.py
contact/templates/contact/: admin_notification.txt
nginx/: Dockerfile  entrypoint.sh  nginx.conf.template  start-dev-proxy.sh
payment/: admin.py  billing.py  models.py  permissions.py  serializers.py  urls.py  views.py
payment/management/commands/: request_apple_webhook.py
payment/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_customer_id.py  0004_alter_subscription_platform_data.py
scripts/: _aws_common.sh  build  cleanup_build_artifacts  cloud-config  cloud-logs  cloud-shell  cloudflare-setup  cloudflare_setup  deploy  dev-entrypoint.sh  ensure-terraform-state  ensure_terraform_state  generate-docker-compose-volumes.sh  gha_build  gha_test  infra-apply  infra_apply  logs  new-deployment  new_deployment  pre_deploy_test  prod-build  prod-cloudflare-setup  prod-deploy  prod-infra-apply  prod-logs  prod-new-deployment  prod-rollback  prod-run-migrate  prod-shell  rollback  rollback-deployment  run_migrate  setup  shell  test
scripts/internal/: aws-common.sh  run-migrate
sites/: admin.py  apps.py  models.py  tests.py  utils.py  views.py
sites/management/commands/: ensure_default_sites.py  sync_deployment_site.py
sites/migrations/: 0001_initial.py  0002_siteattributes_admin_app_labels.py  0003_siteattributes_s3_custom_domain.py
static/css/: auth.css  tweaks.css
teams/: models.py
teams/management/commands/: debug.py
teams/migrations/: 0001_initial.py
templates/: alert.html  base.html  reset_password_form.html
templates/account/: login.html
templates/admin/: base.html
templates/registration/: login.html
terraform/: .gitignore  README.md  cloudflare.tf  database.tf  ecs.tf  foundation.tf  locals.tf  moved.tf  networking.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/templates/: Caddyfile.tftpl  amazon-cloudwatch-agent.json.tftpl  web_user_data.sh.tftpl
users/: admin.py  consumers.py  email.py  models.py  permissions.py  routing.py  serializers.py  tasks.py  test_resend_email.py  urls.py  views.py  websocket_utils.py
users/management/commands/: ensure_dev_superuser.py  ensure_google_oauth.py  ensure_known_user.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number_and_more.py
users/tests/: test_ensure_dev_superuser.py  test_ensure_google_oauth.py  test_ensure_known_user.py
