[project]
name = "api-core"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "adrf==0.1.12",
    "aioredis==2.0.1",
    "app-store-server-library==1.9.0",
    "asyncio==4.0.0",
    "boto3==1.42.26",
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "cryptography==46.0.3",
    "dj-database-url==3.1.0",
    "django==5.2.10",
    "django-allauth==65.13.1",
    "django-cors-headers==4.9.0",
    "django-oauth-toolkit==3.2.0",
    "django-redis==5.4.0",
    "django-storages[s3]==1.14.6",
    "django-stubs==5.2.8",
    "django-stubs-ext==5.2.8",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "gunicorn==23.0.0",
    "hiredis==3.3.0",
    "httpx[http2]==0.28.1",
    "langfuse==3.11.2",
    "livekit-api>=1.1.0",
    "markdown==3.10",
    "openai==2.15.0",
    "pgvector==0.4.2",
    "psycopg[binary]==3.3.2",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "pytest-mock==3.15.1",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "redis==7.1.0",
    "resend>=2.27.0",
    "sentry-sdk[django]==2.49.0",
    "stripe==14.1.0",
    "taskiq-redis==1.2.1",
    "taskiq[reload]==0.12.1",
    "twilio==9.9.1",
    "uvicorn[standard]==0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "contact",
    "payment",
    "sites",
    "teams",
    "users",
]

[tool.hatch.build.targets.wheel.force-include]
"static" = "static"
"templates" = "templates"

[tool.ruff]
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
future-annotations = true
select = ["ALL"]
fixable = ["ALL"]
extend-safe-fixes = [
    "TCH",   # Allow automatic placement of imports in TYPE_CHECKING blocks.
    "EM",    # When raising an f-string exception, move to msg first.
]
extend-select = ["TCH"]
ignore = [
    "D",       # Don't enforce docstrings
    "ANN",     # Don't require type annotations
    "TD",      # No rules for TODO comments
    "C901",    # OPTIONAL: We should let Cursor write complex code
    "ARG001",  # Unused arguments are common in DRF and renaming could lead to inheritance problems.
    "ARG002",  # Same as ARG001 but for methods.
    "PLR0913", # We should let Cursor write functions with many arguments.
    "E501",    # Netpick about long lines.
    "F821",    # Undefined names will be caught by Pylance with a suggestion to import the name (more useful than Ruff which doesn't suggest an import action).
    "TRY003",  # We should let Cursor raise descriptive errors without making new Exception classes all the time. Re-using exceptions/messages is not that important.
    "ERA001",  # Commented out code can be useful to leave behind alternative ideas
    # "PLR0912", # We should let Cursor write complex code
    "G004",    # Logging f-strings isn't actually a problem anymore: https://github.com/pylint-dev/pylint/issues/2395
    "TRY301",  # Prohibits a common pattern (raise within try)
    "TRY300",  # Prohibits a common pattern (returning within try)
    "RET504",  # Assigning to a variable before returning is useful for logging of results
    "PLR2004", # Let Cursor make comparisons with hard-coded values.
    "RUF012",  # Enforcing no class attributes doesn't play well with Django Meta.
    "PGH003",  # Takes too long to track down the specific rule codes when ignoring linter rules inline.
    "N806",    # It's nice to have uppercase variable names when they are types.
    "PLR0915", # It's fine to have long function bodies,
    "W293",    # Let blank lines have whitespace in AI system prompt blocks,
    "COM812",  # No need for trailing comma in argument lists,
    "PGH004",  # I want to write 'noqa' in comments sometimes without a specific rule code.
    "B027",    # This rule makes no sense if an abstract class has some no-op-by-default methods.
    "RET505",  # I simply don't agree that this makes the code more readable.
    "PLR6301", # We allow methods that don't use self. These could be useful for subclasses to override. More refactoring work is needed if not.
    "CPY001",  # Don't need copyright at the top of every file.
    "S608",    # Has to do with SQL, which we never use.
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"models.py" = ["PLC0415"]  # Import tasks locally
"views.py" = ["PLC0415"]  # Import tasks locally
"simulation.py" = ["S101"]  # Asserts allowed
"*/tests/*" = ["S101", "T201", "INP001"]  # Asserts, prints allowed

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--ignore=.git --ignore=data"
markers = [
    "exploratory: mark a test as exploratory (run manually, not part of automated test suite)",
]
